--- a/category-service/src/main/resources/application.properties
+++ b/category-service/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/categoryService
 spring.datasource.username=jeiel
 spring.datasource.password=jeiel
 spring.jpa.hibernate.ddl-auto=update
-
 server.port=8081
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=category-service
