--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=schedulesService
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=schedule-service
+server.port=0
