--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>schedule-service</module>
         <module>goal-service</module>
         <module>discovery-server</module>
+        <module>api-gateway</module>
     </modules>
 
     <properties>
