--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=/api/schedule
 ## Goal Service Route
 spring.cloud.gateway.routes[2].id=goal-service
 spring.cloud.gateway.routes[2].uri=lb://goal-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/goal
+spring.cloud.gateway.routes[2].predicates[0]=Path=/api/goal/**
 
 ## Discovery Service Route
 spring.cloud.gateway.routes[3].id=discovery-service
@@ -30,3 +30,6 @@ spring.cloud.gateway.routes[3].filters[0]=SetPath=/
 spring.cloud.gateway.routes[4].id=discovery-service-static
 spring.cloud.gateway.routes[4].uri=http://localhost:8761
 spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
+
+## Oauth Keyclock
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/estudou-realm
