--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/api/category
 ## Schedule Service Route
 spring.cloud.gateway.routes[1].id=schedule-service
 spring.cloud.gateway.routes[1].uri=lb://schedule-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/schedule
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/schedule/**
 
 ## Goal Service Route
 spring.cloud.gateway.routes[2].id=goal-service
@@ -30,6 +30,11 @@ spring.cloud.gateway.routes[3].filters[0]=SetPath=/
 spring.cloud.gateway.routes[4].id=discovery-service-static
 spring.cloud.gateway.routes[4].uri=http://localhost:8761
 spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
+
+## Actuator Health redirect
+spring.cloud.gateway.routes[5].id=actuator-health
+spring.cloud.gateway.routes[5].uri=lb://schedule-service/actuator/health
+spring.cloud.gateway.routes[5].predicates[0]=Path=/actuator/health
 
 ## Oauth Keyclock
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/estudou-realm
