--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -4,3 +4,20 @@ spring.data.mongodb.database=schedulesService
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=schedule-service
 server.port=0
+
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+## Resilince4j Properties
+resilience4j.circuitbreaker.instances.goal.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.goal.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.goal.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.goal.slidingWindowSize=5
+resilience4j.circuitbreaker.instances.goal.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.goal.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.goal.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.goal.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+## Resilience4J Timeout Properties
+resilience4j.timelimiter.instances.goal.timeout-duration=5s
