add time limiter to timeout requests in vinculateGoal endpoint

--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -21,3 +21,7 @@ resilience4j.circuitbreaker.instances.goal.automaticTransitionFromOpenToHalfOpen
 
 ## Resilience4J Timeout Properties
 resilience4j.timelimiter.instances.goal.timeout-duration=5s
+
+# Resilience4J Retry Properties
+resilience4j.retry.instances.goal.max-attempts=3
+resilience4j.retry.instances.goal.wait-duration=5s
