add zipkin and tracing configuration to all services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,7 @@ services:
       volumes:
         - .local/keycloak/:/opt/jboss/keycloak/standalone/data/
       command: ["start-dev"]
+  zipkin:
+    image: openzipkin/zipkin
+    ports:
+      - "9411:9411"
