--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -25,3 +25,8 @@ resilience4j.timelimiter.instances.goal.timeout-duration=5s
 # Resilience4J Retry Properties
 resilience4j.retry.instances.goal.max-attempts=3
 resilience4j.retry.instances.goal.wait-duration=5s
+
+## Zipkin configuration
+
+spring.zipkin.base-url=http://localhost:9411
+management.tracing.sampling.probability=1.0
