--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -38,3 +38,8 @@ spring.cloud.gateway.routes[5].predicates[0]=Path=/actuator/health
 
 ## Oauth Keyclock
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/estudou-realm
+
+## Zipkin configuration
+
+spring.zipkin.base-url=http://localhost:9411
+management.tracing.sampling.probability=1.0
