--- a/category-service/src/main/resources/application.properties
+++ b/category-service/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8081
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=category-service
+
+## Zipkin configuration
+
+spring.zipkin.base-url=http://localhost:9411
+management.tracing.sampling.probability=1.0
