refactor all folder names from example to estudou

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -8,8 +8,8 @@ logging.level.org.springframework.cloud.gateway=TRACE
 ## Category Service Route
 spring.cloud.gateway.routes[0].id=category-service
 spring.cloud.gateway.routes[0].uri=lb://category-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/category
-
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/category/**
+2
 ## Schedule Service Route
 spring.cloud.gateway.routes[1].id=schedule-service
 spring.cloud.gateway.routes[1].uri=lb://schedule-service
@@ -31,15 +31,9 @@ spring.cloud.gateway.routes[4].id=discovery-service-static
 spring.cloud.gateway.routes[4].uri=http://localhost:8761
 spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
 
-## Actuator Health redirect
-spring.cloud.gateway.routes[5].id=actuator-health
-spring.cloud.gateway.routes[5].uri=lb://schedule-service/actuator/health
-spring.cloud.gateway.routes[5].predicates[0]=Path=/actuator/health
-
 ## Oauth Keyclock
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/estudou-realm
 
 ## Zipkin configuration
-
 spring.zipkin.base-url=http://localhost:9411
 management.tracing.sampling.probability=1.0
