--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -20,16 +20,21 @@ spring.cloud.gateway.routes[2].id=goal-service
 spring.cloud.gateway.routes[2].uri=lb://goal-service
 spring.cloud.gateway.routes[2].predicates[0]=Path=/api/goal/**
 
+## Mission Service Route
+spring.cloud.gateway.routes[3].id=mission-service
+spring.cloud.gateway.routes[3].uri=lb://mission-service
+spring.cloud.gateway.routes[3].predicates[0]=Path=/api/mission/**
+
 ## Discovery Service Route
-spring.cloud.gateway.routes[3].id=discovery-service
-spring.cloud.gateway.routes[3].uri=http://localhost:8761
-spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/web
-spring.cloud.gateway.routes[3].filters[0]=SetPath=/
+spring.cloud.gateway.routes[4].id=discovery-service
+spring.cloud.gateway.routes[4].uri=http://localhost:8761
+spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[4].filters[0]=SetPath=/
 
 ## Discovery Service Static Resources Route
-spring.cloud.gateway.routes[4].id=discovery-service-static
-spring.cloud.gateway.routes[4].uri=http://localhost:8761
-spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
+spring.cloud.gateway.routes[5].id=discovery-service-static
+spring.cloud.gateway.routes[5].uri=http://localhost:8761
+spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/**
 
 ## Oauth Keyclock
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/estudou-realm
