--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -27,6 +27,12 @@ resilience4j.retry.instances.goal.max-attempts=3
 resilience4j.retry.instances.goal.wait-duration=5s
 
 ## Zipkin configuration
-
 spring.zipkin.base-url=http://localhost:9411
 management.tracing.sampling.probability=1.0
+
+## Kafka properties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=scheduleId
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.estudou.scheduleservice.event.ScheduleVinculateGoalEvent
