--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,17 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.3</version>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.4.0</version>
+                <configuration>
+                    <from>
+                        <image>eclipse-temurin:latest</image>
+                    </from>
+                    <to><image>registry.hub.docker.com/jeielalves/${project.artifactId}</image></to>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
