--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 target/
+mysql-keycloak-data
+mongo-data
+mysql-category
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
