--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.org.springframework.cloud.gateway=TRACE
 spring.cloud.gateway.routes[0].id=category-service
 spring.cloud.gateway.routes[0].uri=lb://category-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/category/**
-2
+
 ## Schedule Service Route
 spring.cloud.gateway.routes[1].id=schedule-service
 spring.cloud.gateway.routes[1].uri=lb://schedule-service
@@ -26,13 +26,13 @@ spring.cloud.gateway.routes[3].uri=lb://mission-service
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/mission/**
 
 ## Discovery Service Route
-spring.cloud.gateway.routes[4].id=discovery-service
+spring.cloud.gateway.routes[4].id=discovery-server
 spring.cloud.gateway.routes[4].uri=http://localhost:8761
 spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/web
 spring.cloud.gateway.routes[4].filters[0]=SetPath=/
 
 ## Discovery Service Static Resources Route
-spring.cloud.gateway.routes[5].id=discovery-service-static
+spring.cloud.gateway.routes[5].id=discovery-server-static
 spring.cloud.gateway.routes[5].uri=http://localhost:8761
 spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/**
 
