--- a/category-service/src/main/resources/application.properties
+++ b/category-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/categoryService
+spring.datasource.url=jdbc:mysql://localhost:3306/category_service
 spring.datasource.username=jeiel
 spring.datasource.password=jeiel
 spring.jpa.hibernate.ddl-auto=update
