--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,67 @@ version: '3'
 
 services:
 
+  ## MySQL Docker compose config
+  mysql-category:
+    container_name: mysql-category
+    image: mysql
+    restart: always
+    environment:
+      MYSQL_DATABASE: "category_service"
+      MYSQL_USER: "jeiel"
+      MYSQL_PASSWORD: "jeiel"
+      MYSQL_ROOT_PASSWORD: "password"
+    expose:
+      - "3306"
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./mysql-category:/data/mysql
+
+  ## Mongo configuration
+  mongo:
+    container_name: mongo-schedule
+    image: mongo:7.0.5-jammy
+    restart: unless-stopped
+    ports:
+      - "27018:27017"
+    expose:
+      - "27018"
+    volumes:
+      - ./mongo-data:/data/db
+
+  ## Keycloak configuration
+  keycloak-mysql:
+    container_name: keycloak-mysql
+    image: mysql
+    volumes:
+      - ./mysql-keycloak-data:/var/lib/mysql
+    environment:
+      - MYSQL_DATABASE="keycloak"
+      - MYSQL_USER="jeiel"
+      - MYSQL_PASSWORD="jeiel"
+      - MYSQL_ROOT_PASSWORD="password"
+
+  ## Need to verify realm-export.json
   keycloak:
-      image: quay.io/keycloak/keycloak:23.0.4
-      container_name: keycloak
-      environment:
-        - KEYCLOAK_ADMIN=admin
-        - KEYCLOAK_ADMIN_PASSWORD=admin
-      ports:
-        - "8181:8080"
-      restart: always
-      volumes:
-        - .local/keycloak/:/opt/jboss/keycloak/standalone/data/
-      command: ["start-dev"]
+    image: quay.io/keycloak/keycloak:23.0.4
+    container_name: keycloak
+    command: ["start-dev", "--import-realm"]
+    environment:
+      - DB_VENDOR=MYSQL
+      - DB_ADDR=mysql
+      - DB_DATABASE=keycloak
+      - DB_USER=jeiel
+      - DB_PASSWORD=jeiel
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+    ports:
+      - "8181:8080"
+    restart: always
+    volumes:
+      - ./realms/:/opt/keycloak/data/import/
+    depends_on:
+      - keycloak-mysql
 
   zipkin:
     image: openzipkin/zipkin
@@ -45,3 +94,30 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+
+  ## DISCOVERY SERVER
+  discovery-server:
+    image: jeielalves/discovery-server:latest
+    container_name: discovery-server
+    pull_policy: always
+    ports:
+      - "8761:8761"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - zipkin
+
+  ## API GATEWAY
+  api-gateway:
+    image: jeielalves/api-gateway:latest
+    container_name: api-gateway
+    pull_policy: always
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY=TRACE
+    depends_on:
+      - zipkin
+      - keycloak
+      - discovery-server
