everything works on docker compose env, thanks to god

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -37,7 +37,9 @@ spring.cloud.gateway.routes[5].uri=http://localhost:8761
 spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/**
 
 ## Oauth Keyclock
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/estudou-realm
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8181/realms/estudou-realm
+
+logging.level.org.springframework.security=DEBUG
 
 ## Zipkin configuration
 spring.zipkin.base-url=http://localhost:9411
