--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3'
 
 services:
-
   ## MySQL Docker compose config
   mysql-category:
     container_name: mysql-category
@@ -17,6 +16,20 @@ services:
     volumes:
       - ./mysql-category:/data/mysql
 
+  mysql-goal:
+    container_name: mysql-goal
+    image: mysql
+    restart: always
+    environment:
+      MYSQL_DATABASE: "goal_service"
+      MYSQL_USER: "jeiel"
+      MYSQL_PASSWORD: "jeiel"
+      MYSQL_ROOT_PASSWORD: "password"
+    ports:
+      - "3307:3306"
+    volumes:
+      - ./mysql-goal:/data/mysql
+
   ## Mongo configuration
   mongo:
     container_name: mongo-schedule
@@ -30,6 +43,7 @@ services:
       - ./mongo-data:/data/db
 
   ## Keycloak configuration
+  ## Keycloak database
   keycloak-mysql:
     container_name: keycloak-mysql
     image: mysql
@@ -41,7 +55,7 @@ services:
       - MYSQL_PASSWORD="jeiel"
       - MYSQL_ROOT_PASSWORD="password"
 
-  ## Need to verify realm-export.json
+  ## Keycloak
   keycloak:
     image: quay.io/keycloak/keycloak:23.0.4
     container_name: keycloak
@@ -77,6 +91,7 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 1000
 
+  ## KAFKA broker
   broker:
     image: confluentinc/cp-kafka:7.5.3
     container_name: broker
@@ -132,3 +147,56 @@ services:
       - discovery-server
       - api-gateway
       - zipkin
+
+  ## Goal Service
+  goal-service:
+    container_name: goal-service
+    image: jeielalves/goal-service:latest
+    pull_policy: always
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      - mysql-goal
+      - discovery-server
+      - api-gateway
+      - zipkin
+
+  # ## Mission Service
+  # mission-service:
+  #   container_name: mission-service
+  #   image: jeielalves/mission-service:latest
+  #   pull_policy: always
+  #   environment:
+  #     - SPRING_PROFILES_ACTIVE=docker
+  #   depends_on:
+  #     - mysql-category
+  #     - discovery-server
+  #     - api-gateway
+  #     - zipkin
+
+  # ## Notification Service
+  # notification-service:
+  #   container_name: notification-service
+  #   image: jeielalves/notification-service:latest
+  #   pull_policy: always
+  #   environment:
+  #     - SPRING_PROFILES_ACTIVE=docker
+  #   depends_on:
+  #     - zipkin
+  #     - broker
+  #     - discovery-server
+  #     - api-gateway
+
+  # ## Schedule Service
+  # schedule-service:
+  #   container_name: schedule-service
+  #   image: jeielalves/schedule-service:latest
+  #   pull_policy: always
+  #   environment:
+  #     - SPRING_PROFILES_ACTIVE=docker
+  #   depends_on:
+  #     - mongo
+  #     - broker
+  #     - discovery-server
+  #     - api-gateway
+  #     - zipkin
