FIX all issues related to GoalService Advice error Handler; fix kafka broker broking the ScheduleService

--- a/schedule-service/src/main/resources/application-docker.properties
+++ b/schedule-service/src/main/resources/application-docker.properties
@@ -1,9 +1,9 @@
-
 # Mongo dabatase
 spring.data.mongodb.host=mongo-schedule
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=schedules_service
 
-# Eureka and zipkin
+# Eureka, Kafka and zipkin
 eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
 spring.zipkin.base-url=http://zipkin:9411
+spring.kafka.bootstrap-servers=broker:29092
