--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=api-gateway
+server.port=8181
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
@@ -37,9 +38,7 @@ spring.cloud.gateway.routes[5].uri=http://localhost:8761
 spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/**
 
 ## Oauth Keyclock
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8181/realms/estudou-realm
-
-logging.level.org.springframework.security=DEBUG
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/estudou-realm
 
 ## Zipkin configuration
 spring.zipkin.base-url=http://localhost:9411
