--- a/goal-service/src/main/resources/application.properties
+++ b/goal-service/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/goal_service
+spring.datasource.url=jdbc:mysql://localhost:3307/goal_service
 spring.datasource.username=jeiel
 spring.datasource.password=jeiel
 spring.jpa.hibernate.ddl-auto=update
 server.port=8082
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=goal-service
+spring.mvc.throw-exception-if-no-handler-found=true
 
 ## Zipkin configuration
 spring.zipkin.base-url=http://localhost:9411
