--- a/goal-service/src/main/resources/application-docker.properties
+++ b/goal-service/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
 # Mysql
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql-goal:3306/goal_service
+spring.datasource.url=jdbc:mysql://mysql-estudou:3306/estudou_db
 spring.datasource.username=jeiel
 spring.datasource.password=jeiel
 
