--- a/schedule-service/src/main/resources/application-docker.properties
+++ b/schedule-service/src/main/resources/application-docker.properties
@@ -1,7 +1,7 @@
 # Mongo dabatase
-spring.data.mongodb.host=mongo-schedule
+spring.data.mongodb.host=mongo-estudou
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=schedules_service
+spring.data.mongodb.database=estudou_db
 
 # Eureka, Kafka and zipkin
 eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
