--- a/category-service/src/main/resources/application-docker.properties
+++ b/category-service/src/main/resources/application-docker.properties
@@ -4,6 +4,6 @@ spring.zipkin.base-url=http://zipkin:9411
 
 ## Database
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql-category:3306/category_service
+spring.datasource.url=jdbc:mysql://mysql-estudou:3306/estudou_db
 spring.datasource.username=jeiel
 spring.datasource.password=jeiel
