--- a/goal-service/src/main/resources/application.properties
+++ b/goal-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/goal_service
+spring.datasource.url=jdbc:mysql://localhost:3306/estudou_db
 spring.datasource.username=jeiel
 spring.datasource.password=jeiel
 spring.jpa.hibernate.ddl-auto=update
