--- a/mission-service/src/main/resources/application-docker.properties
+++ b/mission-service/src/main/resources/application-docker.properties
@@ -1,6 +1,6 @@
 ## Mysql configuration
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://mysql-mission:3306/mission_service
+spring.datasource.url=jdbc:mysql://mysql-estudou:3306/estudou_db
 spring.datasource.username=jeiel
 spring.datasource.password=jeiel
 spring.jpa.hibernate.ddl-auto=update
