--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=schedules_service
+spring.data.mongodb.database=estudou_db
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=schedule-service
 server.port=0
