--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -27,7 +27,7 @@ resilience4j.retry.instances.goal.max-attempts=3
 resilience4j.retry.instances.goal.wait-duration=5s
 
 ## Zipkin configuration
-spring.zipkin.base-url=http://localhost:9411
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 ## Kafka properties
