--- a/api-gateway/src/main/resources/application-docker.properties
+++ b/api-gateway/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 server.port=8181
 eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/estudou-realm
-spring.zipkin.base-url=http://zipkin:9411
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 app.eureka-server=discovery-server
