--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -41,5 +41,8 @@ spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/**
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/estudou-realm
 
 ## Zipkin configuration
-spring.zipkin.base-url=http://localhost:9411
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
+
+# Actuator promotheus Endpoint
+management.endpoint.web.exposure.include=prometheus
