--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -4,5 +4,8 @@ eureka.client.fetch-registry=false
 server.port=8761
 
 ## Zipkin configuration
-spring.zipkin.base-url=http://localhost:9411
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
+
+# Actuator promotheus Endpoint
+management.endpoint.web.exposure.include=prometheus
