--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -1,6 +1,7 @@
 version: '3'
 
 services:
+
   ## MySQL Docker compose config
   mysql-estudou:
     container_name: mysql-estudou
@@ -76,7 +77,7 @@ services:
       - ZOOKEEPER_CLIENT_PORT=2181
       - ZOOKEEPER_TICK_TIME=1000
 
-  ## KAFKA broker
+  ## KAFKA Broker
   broker:
     image: confluentinc/cp-kafka:7.5.3
     container_name: broker
