--- a/goal-service/src/main/resources/application-docker.properties
+++ b/goal-service/src/main/resources/application-docker.properties
@@ -6,4 +6,4 @@ spring.datasource.password=jeiel
 
 # Eureka and zipkin
 eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
-spring.zipkin.base-url=http://zipkin:9411
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
