--- a/goal-service/src/main/resources/application.properties
+++ b/goal-service/src/main/resources/application.properties
@@ -9,5 +9,8 @@ spring.application.name=goal-service
 spring.mvc.throw-exception-if-no-handler-found=true
 
 ## Zipkin configuration
-spring.zipkin.base-url=http://localhost:9411
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
+
+# Actuator promotheus Endpoint
+management.endpoint.web.exposure.include=prometheus
