--- a/mission-service/src/main/resources/application-docker.properties
+++ b/mission-service/src/main/resources/application-docker.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 ## Zipkin configuration
 eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
-spring.zipkin.base-url=http://zipkin:9411
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
