--- a/mission-service/src/main/resources/application.properties
+++ b/mission-service/src/main/resources/application.properties
@@ -8,5 +8,8 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=mission-service
 
 ## Zipkin configuration
-spring.zipkin.base-url=http://localhost:9411
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
+
+# Actuator promotheus Endpoint
+management.endpoint.web.exposure.include=prometheus
