--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=notification-service
 server.port=0
 
 ## Zipkin configuration
-spring.zipkin.base-url=http://localhost:9411
+management.zipkin.tracing.endpoint=http://localhost:9411
 management.tracing.sampling.probability=1.0
 
 ## Kafka configuration
@@ -12,3 +12,6 @@ spring.kafka.consumer.group-id=notificationId
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.type.mapping=event:com.estudou.notificationservice.event.ScheduleVinculateGoalEvent
+
+# Actuator promotheus Endpoint
+management.endpoint.web.exposure.include=prometheus
