--- a/schedule-service/src/main/resources/application-docker.properties
+++ b/schedule-service/src/main/resources/application-docker.properties
@@ -5,5 +5,5 @@ spring.data.mongodb.database=estudou_db
 
 # Eureka, Kafka and zipkin
 eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
-spring.zipkin.base-url=http://zipkin:9411
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 spring.kafka.bootstrap-servers=broker:29092
