fix: update prometheus configuration variables not showing in prometheus graphical interface

--- a/category-service/src/main/resources/application.properties
+++ b/category-service/src/main/resources/application.properties
@@ -1,15 +1,15 @@
+spring.application.name=category-service
+
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/estudou_db
 spring.datasource.username=jeiel
 spring.datasource.password=jeiel
 spring.jpa.hibernate.ddl-auto=update
-server.port=8081
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.application.name=category-service
 
 ## Zipkin configuration
 management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 # Actuator promotheus Endpoint
-management.endpoint.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=prometheus
