--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -8,4 +8,4 @@ management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 # Actuator promotheus Endpoint
-management.endpoint.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=prometheus
