--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,36 +93,36 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
-  # ## Promotheus
-  # promotheus:
-  #   image: prom/prometheus:v2.51.0
-  #   container_name: prometheus
-  #   restart: unless-stopped
-  #   ports:
-  #     - "9090:9090"
-  #   volumes:
-  #     - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-  #   depends_on:
-  #     - category-service
-  #     - goal-service
-  #     - mission-service
-  #     - schedule-service
-  #     - notification-service
+  ## Promotheus
+  promotheus:
+    image: prom/prometheus:v2.51.0
+    container_name: prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    depends_on:
+      - category-service
+      - goal-service
+      - mission-service
+      - schedule-service
+      - notification-service
 
-  # ## Grafana
-  # grafana:
-  #   image: grafana/grafana-oss:10.1.9
-  #   container_name: grafana
-  #   restart: unless-stopped
-  #   ports:
-  #     - "3000:3000"
-  #   links:
-  #     - promotheus:prometheus
-  #   volumes:
-  #     - grafana_storage:/var/lib/grafana
-  #   environment:
-  #     - GF_SECURITY_ADMIN_USER=admin
-  #     - GF_SECURITY_ADMIN_PASSWORD=password
+  ## Grafana
+  grafana:
+    image: grafana/grafana-oss:10.1.9
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    links:
+      - promotheus:prometheus
+    volumes:
+      - grafana_storage:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=password
 
   ## Discovery server
   discovery-server:
@@ -217,5 +217,5 @@ services:
       - discovery-server
       - api-gateway
 
-# volumes:
-#   grafana_storage: {}
+volumes:
+  grafana_storage: {}
