--- a/goal-service/src/main/resources/application.properties
+++ b/goal-service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
+spring.application.name=goal-service
+
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/estudou_db
 spring.datasource.username=jeiel
 spring.datasource.password=jeiel
 spring.jpa.hibernate.ddl-auto=update
-server.port=8082
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.application.name=goal-service
 spring.mvc.throw-exception-if-no-handler-found=true
 
 ## Zipkin configuration
@@ -13,4 +13,4 @@ management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 # Actuator promotheus Endpoint
-management.endpoint.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=prometheus
