--- a/mission-service/src/main/resources/application-docker.properties
+++ b/mission-service/src/main/resources/application-docker.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 ## Mysql configuration
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://mysql-estudou:3306/estudou_db
