--- a/mission-service/src/main/resources/application.properties
+++ b/mission-service/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/estudou_db
 spring.datasource.username=jeiel
 spring.datasource.password=jeiel
 spring.jpa.hibernate.ddl-auto=update
-server.port=8083
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=mission-service
 
@@ -12,4 +11,4 @@ management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 # Actuator promotheus Endpoint
-management.endpoint.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=prometheus
