--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=notification-service
-server.port=0
 
 ## Zipkin configuration
 management.zipkin.tracing.endpoint=http://localhost:9411
@@ -14,4 +13,4 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.consumer.properties.spring.json.type.mapping=event:com.estudou.notificationservice.event.ScheduleVinculateGoalEvent
 
 # Actuator promotheus Endpoint
-management.endpoint.web.exposure.include=prometheus
+management.endpoints.web.exposure.include=prometheus
