--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,32 +1,33 @@
 global:
-  scrape_interval: 10s
+  scrape_interval:     10s
   evaluation_interval: 10s
+
 scrape_configs:
-  - job_name: 'category-service'
+  - job_name: 'category_service'
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['category-service:8080']
         labels:
           application: 'Category Service Application'
-  - job_name: 'goal-service'
+  - job_name: 'goal_service'
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['goal-service:8080']
         labels:
           application: 'Goal Service Application'
-  - job_name: 'mission-service'
+  - job_name: 'mission_service'
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['mission-service:8080']
         labels:
           application: 'Mission Service Application'
-  - job_name: 'notification-service'
+  - job_name: 'notification_service'
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['notification-service:8080']
         labels:
           application: 'Notification Service Application'
-  - job_name: 'schedule-service'
+  - job_name: 'schedule_service'
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: ['schedule-service:8080']
