add update to goal service; update tests and fix model removing the goal dayId

--- a/goal-service/src/main/resources/application.properties
+++ b/goal-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=goal-service
+server.port=8081
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/estudou_db
