--- a/category-service/src/main/resources/application.properties
+++ b/category-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=category-service
+server.port=8082
 
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/estudou_db
