--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -26,16 +26,28 @@ spring.cloud.gateway.routes[3].id=mission-service
 spring.cloud.gateway.routes[3].uri=lb://mission-service
 spring.cloud.gateway.routes[3].predicates[0]=Path=/api/mission/**
 
+## User Service Route
+spring.cloud.gateway.routes[4].id=user-service
+spring.cloud.gateway.routes[4].uri=lb://user-service
+spring.cloud.gateway.routes[4].predicates[0]=Path=/api/user/**
+
+# spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+# spring.cloud.gateway.routes[4].filters[0]=AddRequestHeader=Authorization, ${{header.Authorization}}
+
+# filters:
+# - StripPrefix=1
+# - AddRequestHeader=Authorization, ${{header.Authorization}}
+
 ## Discovery Service Route
-spring.cloud.gateway.routes[4].id=discovery-server
-spring.cloud.gateway.routes[4].uri=http://localhost:8761
-spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/web
-spring.cloud.gateway.routes[4].filters[0]=SetPath=/
+spring.cloud.gateway.routes[5].id=discovery-server
+spring.cloud.gateway.routes[5].uri=http://localhost:8761
+spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[5].filters[0]=SetPath=/
 
 ## Discovery Service Static Resources Route
-spring.cloud.gateway.routes[5].id=discovery-server-static
-spring.cloud.gateway.routes[5].uri=http://localhost:8761
-spring.cloud.gateway.routes[5].predicates[0]=Path=/eureka/**
+spring.cloud.gateway.routes[6].id=discovery-server-static
+spring.cloud.gateway.routes[6].uri=http://localhost:8761
+spring.cloud.gateway.routes[6].predicates[0]=Path=/eureka/**
 
 ## Oauth Keyclock
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/estudou-realm
