--- a/mission-service/src/main/resources/application.properties
+++ b/mission-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=0
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/estudou_db
 spring.datasource.username=jeiel
